# composition

./: add.wasm  add.wat  inc.wasm  inspect.wat  package-lock.json  package.json  square.wasm
add/: add.js
inc/: Cargo.toml
inc/src/: lib.rs
inc/wit/: world.wit
square/: Cargo.toml
square/src/: lib.rs
square/wit/: world.wit
